UIP-1857 Update proxima nova include
Change-Id: I768c0e8e095b36d11a7c5d45050e210318d0717f

--- a/packages/ui-library/src/css/collapsible-section.scss
+++ b/packages/ui-library/src/css/collapsible-section.scss
@@ -16,7 +16,7 @@
         color: $color-slate;
         line-height: 1em;
         cursor: pointer;
-        font-family: $font-pn-regular;
+        @include font-pn-regular;
     }
     > .collapsible-section-title-value {
         font-size: 14px;
