--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -606,7 +606,7 @@ button.tile-button {
         }
 
         &__label {
-            font-family: $font-pn-semibold;
+            @include font-pn-semibold;
             font-size: 17px;
             margin-bottom: $spacing-xs;
         }
