--- a/packages/ui-library/src/css/general/_page-header.scss
+++ b/packages/ui-library/src/css/general/_page-header.scss
@@ -27,7 +27,7 @@
 
 .page-header__title {
     font-size: 24px;
-    font-family: $font-pn-regular;
+    @include font-pn-regular;
     color: $color-slate;
     word-wrap: break-word;
 }
