--- a/packages/ui-library/src/css/layout/_header-bar.scss
+++ b/packages/ui-library/src/css/layout/_header-bar.scss
@@ -87,12 +87,12 @@ $topnav-bg: $color-neutral-10;
 }
 
 .header-bar__site-title {
-    font-family: $font-pn-regular;
+    @include font-pn-regular;
     font-size: 20px;
 }
 
 .header-bar__additional-content {
-    font-family: $font-pn-light;
+    @include font-pn-light;
 }
 
 .market-selector.input-custom-select {
@@ -106,7 +106,7 @@ $topnav-bg: $color-neutral-10;
 
         .input-text.readonly input.selected-option-label {
             color: $color-white;
-            font: $font-pn-regular;
+            @include font-pn-regular;
             font-size: $font-size-normal - 1px;
 
             @include border-radius(2px);
@@ -157,7 +157,7 @@ $topnav-bg: $color-neutral-10;
     color: $color-white;
     cursor: pointer;
     display: block;
-    font-family: $font-pn-light;
+    @include font-pn-light;
     font-size: $font-size-normal - 1px;
     height: auto;
     line-height: inherit;
@@ -201,7 +201,7 @@ $topnav-bg: $color-neutral-10;
 }
 
 .header-nav__item--selected .header-nav__item-label {
-    font-family: $font-pn-semibold;
+    @include font-pn-semibold;
 
     &:after {
         height: 2px;
@@ -214,7 +214,7 @@ $topnav-bg: $color-neutral-10;
 .environment-selector {
     .collapsible-link {
         color: $color-neutral-90;
-        font: $font-pn-regular;
+        @include font-pn-regular;
         font-size: $font-size-normal;
 
         &.right:after {
