--- a/packages/ui-library/src/css/tutorial.scss
+++ b/packages/ui-library/src/css/tutorial.scss
@@ -35,13 +35,13 @@
             font-size: 36px;
             line-height: 1em;
             margin: 0 0 25px;
-            font-family: $font-pn-regular;
+            @include font-pn-regular;
         }
         .description {
             text-align: left;
             line-height: 1.6em;
             font-size: 18px;
-            font-family: $font-pn-light;
+            @include font-pn-light;
         }
         .page {
             font-weight: 100;
