--- a/packages/ui-library/src/css/wizard.scss
+++ b/packages/ui-library/src/css/wizard.scss
@@ -116,7 +116,7 @@ $wizard-close-button-color: $color-strong-neutral-40;
         display: flex;
         background-color: $color-white;
         font-size: $wizard-title-font-size;
-        font-family: $font-pn-light;
+        @include font-pn-light;
         border-bottom: 1px solid $wizard-header-border-color;
     }
 
@@ -136,7 +136,7 @@ $wizard-close-button-color: $color-strong-neutral-40;
     }
 
     &__header-title {
-        font-family: $font-pn-regular;
+        @include font-pn-regular;
         font-size: 12px;
         color: $color-blue-grey;
         margin-bottom: $spacing-sm;
@@ -172,7 +172,7 @@ $wizard-close-button-color: $color-strong-neutral-40;
     &-step {
         &__title {
             font-size: $wizard-title-font-size;
-            font-family: $font-pn-light;
+            @include font-pn-light;
             line-height: 1em;
             margin-bottom: $wizard-text-spacing;
         }
@@ -248,7 +248,7 @@ $wizard-close-button-color: $color-strong-neutral-40;
 
                 &--optional-active {
                     @include required-active-css;
-                    font-family: $font-pn-bold;
+                    @include font-pn-bold;
                     font-size: 24px;
 
                     &:before {
@@ -308,7 +308,7 @@ $wizard-close-button-color: $color-strong-neutral-40;
 
         &__divider {
             position: relative;
-            font-family: $font-pn-light;
+            @include font-pn-light;
             font-size: 12px;
             text-align: center;
             text-transform: uppercase;
@@ -370,7 +370,7 @@ $wizard-close-button-color: $color-strong-neutral-40;
 
             &-description {
                 margin-left: $wizard-progress-menu-padding + $wizard-progress-icon-size;
-                font-family: $font-pn-light;
+                @include font-pn-light;
                 font-size: 14px;
             }
         }
