UIP-1984: Add syntax highlighting to CodeView
Change-Id: I3e46874ca2c851ca8cb77d549e453c4f5487ca96

--- a/packages/ui-library/src/css/code-view.scss
+++ b/packages/ui-library/src/css/code-view.scss
@@ -1,4 +1,6 @@
+
 .code-view {
+    @import './hljs.scss';
     padding: $spacing-md;
     max-height: 400px;
     overflow: scroll;
@@ -18,3 +20,5 @@
     word-break: normal;
     line-height: 1.5;
 }
+
+
