UIP-2033 : Remove row-builder css class no longer needed - tweak remove button css
Change-Id: I5eb6b7f25c8f3500fd18e909da3cf6c1608fec11

--- a/packages/ui-library/src/css/rows/_row-builder.scss
+++ b/packages/ui-library/src/css/rows/_row-builder.scss
@@ -11,10 +11,6 @@
     &__remove {
         margin-bottom: 1px;
 
-        &--no-label {
-            align-self: center;
-        }
-
         &__label {
             @include text-label;
             line-height: $font-size-reduced;
@@ -26,6 +22,7 @@
         &__button {
             display: block;
             margin-left: $spacing-sm;
+            margin-bottom: 6px;
         }
     }
 
