UIP-1787 Change infinite scroll template to match designs * Added wrapper components for expandable lists * Tweaked padding/after element for content to make it more consistent -- so the scrolling list wrapper works * Added the "tight" display mode to Calendar * Created variables for modifier CSS classes * CSS tweaks
Change-Id: Ic7474ecebdf25de5bb8bde12c9b78ab262844131

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -380,7 +380,7 @@ button.ellipsis-loader-button {
 
     height: $height;
     line-height: $height;
-    margin-bottom: $spacing-xl;
+    margin-bottom: $spacing-lg;
 
     @include border-radius(3px);
     @include base-button-styles;
