UIP-2025 scroll expandable row into view when offscreen
Change-Id: I8e6fc9d43152c5bb777bc3f8bb344e1d28902e91

--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -206,7 +206,7 @@ $expandable-row-gap: 12px;
             max-height: 4000px;
             border: 1px solid $color-rabbit-fur;
 
-            @include transition(max-height 1s);
+            //@include transition(max-height 1s);
 
             .expand-btn {
                 position: relative;
