UIP-2045 removed demo, documentation link and template file path subtitle
Change-Id: I480d37fe3b8c6231871807b49074040355af2040

--- a/packages/ui-library/src/demo/css/layout.scss
+++ b/packages/ui-library/src/demo/css/layout.scss
@@ -13,7 +13,8 @@ $sidenav-lineheight: 22px;
 
 .doc {
     width: 100%;
-    position: inherit;
+    position: relative;
+    z-index: $zindex__elevated;
 
     @include transition(all 0.3s);
 
@@ -62,6 +63,11 @@ $sidenav-lineheight: 22px;
 
         .section-content {
             margin: 0;
+        }
+
+        .doc .doc-links {
+            top: -20px;
+            right: -30px;
         }
     }
     .section-content {
