UIP-2009: Add error message to MultiValues
Change-Id: I5b0be2106108a11002f72166571c800fa45399e5

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2401,6 +2401,14 @@ input[type=file] {
     &.input-message--info {
         @include messageTypeCss ($color-active-blue, $icon-info);
     }
+
+    .input-multivalues {
+        &__error {
+            display: block;
+            font-size: 0.9em;
+            width: 100%;
+        }
+    }
 }
 
 .disabled {
