UIP-2028 : remove min-height on content dicontent div causing gap beneath nav on small screens
Change-Id: If5f7b10e3cc98090f5430e43ffc182f03c99b3be

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -609,6 +609,7 @@ $color-grey-minor-1: $color-neutral-30;
     bottom: 0;
     left: $layout-nav-width;
     padding: 25px 40px 0;
+    box-sizing: border-box;
 
     // workaround for bottom padding - bottom padding is ignored in scrolling elements in FF and IE
     &:after {
