UIP-2032 fixed unitinptu dropdown border when class name is reversed
Change-Id: Ibb907f63ae39103325334e0b1e4b277e510e1259

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2676,7 +2676,6 @@ input[type=file] {
             input[type=text] {
                 &.selected-option-label {
                     text-align: left;
-                    border-color: transparent;
                 }
             }
         }
@@ -2685,6 +2684,9 @@ input[type=file] {
                 input[type=text] {
                     border-color: $color-dolphin;
                     background-color: $color-white;
+                    &.selected-option-label {
+                        border-color: $color-dolphin;
+                    }
                 }
             }
             > .input-text {
