UIP-2063: Modified SSO Attributes template to match new designs
Change-Id: I630accd26544b462132786c90321b4fd2356934e

--- a/packages/ui-library/src/css/help.scss
+++ b/packages/ui-library/src/css/help.scss
@@ -140,4 +140,9 @@
             @include box-shadow(0 3px 4px 0 rgba($color-black, 0.1));
         }
     }
+
+    // Class to add same left margin that tooltips have when inside of inputs.
+    &--left-margin {
+        margin-left: 10px;
+    }
 }
