--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -3162,6 +3162,10 @@ label {
             width: 202px;
             overflow: auto;
             margin: 0 0 10px;
+
+            &--no-title {
+                margin-top: 10px;
+            }
         }
         .tooltip-menu-option {
             display: block;
