UIP-2055 : add Actions template and integration tests > clean up simplified row builder styling > add "standalone" prop to formLabel > tweak styling on pageSection > add "alignInputs" prop to button component
Change-Id: I49ebd798fc3a1a89b5d924a58656134cbebc4011

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -829,7 +829,8 @@ $color-grey-minor-1: $color-neutral-30;
     margin: 0 0 40px 25px;
 }
 
-.page-section-title-desc {
+.page-section__description,
+.page-section-title-desc { // deprecated selector
     margin: -10px 0 25px 0;
 
     &.only {
