--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -350,6 +350,13 @@ button,
             margin: 0 0 6px;
         }
     }
+    &.align-inputs {
+        margin-bottom: 2px;
+
+        &.inline {
+            margin-bottom: 5px;
+        }
+    }
 }
 
 .button--active {
