UIP-2009: Multivalues error tweaks
Change-Id: I59abaf92b924de1cd4089ef920bf3c631dcbcdfd

--- a/packages/ui-library/src/css/multivalues.scss
+++ b/packages/ui-library/src/css/multivalues.scss
@@ -26,6 +26,11 @@
         padding: 12px;
         width: 100%;
         height: 200px;
+        border: 1px solid $color-input-fill;
+
+        &--error {
+            border: 1px solid $color-critical-red;
+        }
 
         @include box-sizing(border-box);
 
